--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link href='https://unpkg.com/boxicons/css/boxicons.min.css' rel='stylesheet'>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
+    <link href='https://unpkg.com/boxicons/css/boxicons.min.css' rel='stylesheet' async>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" defer></script>
 </head>
 
 <body>
@@ -15,19 +15,19 @@
     <!-- Header Section -->
 
     <header class="header">
-        <a href="#home" class="logo">Saqib
+        <a href="#home" class="logo" title="Navbar logo">Saqib
             <span>Shaikh</span>
         </a>
 
         <i class='bx bx-menu' id="menu-icon" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar"></i>
 
         <nav class="navbar">
-            <a href="#home" class="active">Home</a>
-            <a href="#education">Education</a>
-            <a href="#projects">Projects</a>
-            <a href="#services">Skills</a>
-            <a href="#portfolio">Portfolio</a>
-            <a href="#contact">Contact</a>
+            <a href="#home" class="active" title="Home (Current section)">Home</a>
+            <a href="#education" title="Go to Education section">Education</a>
+            <a href="#projects" title="Go to Projects section">Projects</a>
+            <a href="#services" title="Go to Skills section">Skills</a>
+            <a href="#portfolio" title="Go to Resume section">Portfolio</a>
+            <a href="#contact" title="Go to Contact section">Contact</a>
         </nav>
     </header>
 
@@ -41,11 +41,11 @@
                 reach maximum potential, learn new things, and get experience in the IT industry.</p>
 
             <div class="social-icons">
-                <a href="https://www.linkedin.com/in/saqib-shaikh-1553a31ba/" target="_blank"><i
+                <a href="https://www.linkedin.com/in/saqib-shaikh-1553a31ba/" target="_blank" title="Link to LinkedIn ID"><i
                         class='bx bxl-linkedin-square'></i></a>
-                <a href="https://github.com/heysaqib" target="_blank"><i class='bx bxl-github'></i></a>
-                <a href="mailto:mailthatnerd@gmail.com.com" target="_blank"><i class='bx bxl-gmail'></i></a>
-                <a href="https://www.instagram.com/saqibshaikh.ig" target="_blank"><i class='bx bxl-instagram'></i></a>
+                <a href="https://github.com/heysaqib" target="_blank" title="Link to GitHub ID"><i class='bx bxl-github'></i></a>
+                <a href="mailto:mailthatnerd@gmail.com.com" target="_blank" title="Link to mail the creator"><i class='bx bxl-gmail'></i></a>
+                <a href="https://www.instagram.com/saqibshaikh.ig" target="_blank" title="Link to Instagram ID"><i class='bx bxl-instagram'></i></a>
             </div>
 
             <div class="btn-group">
@@ -55,7 +55,7 @@
         </div>
 
         <div class="home-img">
-            <img src="SaqibSquared.jpg" alt="">
+            <img src="SaqibSquared.webp" height="200px" alt="Profile Picture" loading="lazy">
         </div>
     </section>
 
@@ -215,7 +215,7 @@
 
         <div class="portfolio-container">
             <div class="resume-container rounded shadow-lg bg-white">
-                <iframe src="SaqibLShaikh-Master-Resume-06-09-24.pdf#toolbar=0" allowfullscreen></iframe>
+                <img src="SaqibLShaikh-master-resume.webp" title="Preview of Resume PDF">
             </div>
             <div class="btn-group">
                 <a href="SaqibLShaikh-Master-Resume-06-09-24.pdf" download="Resume" class="btn">Download CV</a>
@@ -257,26 +257,26 @@
 
     <footer class="footer">
         <div class="social">
-            <a href="https://www.linkedin.com/in/saqib-shaikh-1553a31ba/" target="_blank"><i
+            <a href="https://www.linkedin.com/in/saqib-shaikh-1553a31ba/" target="_blank" title="Link to LinkedIn ID"><i
                     class='bx bxl-linkedin-square'></i></a>
-            <a href="https://github.com/heysaqib" target="_blank"><i class='bx bxl-github'></i></a>
-            <a href="mailto:mailthatnerd@gmail.com" target="_blank"><i class='bx bxl-gmail'></i></a>
-            <a href="https://www.instagram.com/saqibshaikh.ig" target="_blank"><i class='bx bxl-instagram'></i></a>
+            <a href="https://github.com/heysaqib" target="_blank" title="Link to GitHub ID"><i class='bx bxl-github'></i></a>
+            <a href="mailto:mailthatnerd@gmail.com" target="_blank" title="Link to send a Mail to the creator"><i class='bx bxl-gmail'></i></a>
+            <a href="https://www.instagram.com/saqibshaikh.ig" target="_blank" title="Link to Instagram ID"><i class='bx bxl-instagram'></i></a>
         </div>
 
 
         <ul class="list">
             <li>
-                <a href="#">FAQ</a>
+                <a href="#" title="Go back to FAQ">FAQ</a>
             </li>
             <li>
-                <a href="#portfolio">Portfolio</a>
+                <a href="#portfolio" title="Go back to Portfolio">Portfolio</a>
             </li>
             <li>
-                <a href="#">About Me</a>
+                <a href="#" title="Go back to About">About Me</a>
             </li>
             <li>
-                <a href="#contact">Contact</a>
+                <a href="#contact" title="Go back to Contact">Contact</a>
             </li>
         </ul>
         <p class="copyright">
@@ -286,8 +286,8 @@
     </footer>
 
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
+    <script defer>
         $("#submit-form").submit(function (e) {
             e.preventDefault(); // Prevent default form submission
 
@@ -397,9 +397,9 @@
         });
     </script>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <!-- Bootstrap JS Bundle (includes Popper.js for dropdowns and tooltips) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
 </body>
 
 </html>
