--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <img src="SaqibLShaikh-master-resume.webp" title="Preview of Resume PDF">
             </div>
             <div class="btn-group">
-                <a href="SaqibLShaikh-Master-Resume-06-09-24.pdf" download="Resume" class="btn">Download CV</a>
+                <a href="https://drive.google.com/file/d/1hFVe8U7Y8wzNE09ifx62yzMFPp93qR1u/view?usp=sharing" download="Resume" class="btn">Download CV</a>
             </div>
         </div>
 
