--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
-    <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons/css/boxicons.min.css' rel='stylesheet'>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" defer></script>
 </head>
 
 <body>
@@ -55,7 +55,7 @@
         </div>
 
         <div class="home-img">
-            <img src="SaqibSquared.webp" height="200px" alt="Profile Picture" loading="lazy">
+            <img src="SaqibSquared.webp" height="200px" width="200px" alt="Profile Picture" loading="eager">
         </div>
     </section>
 
